exercises/04_derive/08_trybuild_errors/tests/fail/on_enum.rs
use trybuild_errors_exercise::Getters;

#[derive(Getters)]
enum Shape {
    Circle,
    Square,
}

fn main() {}
